--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -30,6 +30,6 @@
   @media (max-width: $max-sm) {
     width: 100%;
     justify-content: space-between;
-    padding-bottom: $space-lg;
+    margin: auto;
   }
 }
